Parsing stuff/QueryParser.py
# Generated from C:/Users/jackk/OneDrive/College/Fall Semester 2024/CS3050/RamenDatabase/Parsing stuff/Query.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class QueryParser ( Parser ):

    grammarFileName = "Query.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'AND'", "'OR'", "'Brand'", "'Country'", 
                     "'Style'", "'Variety'", "'Stars'", "'=='", "'<'", "'>'", 
                     "'<='", "'>='", "'!='" ]

    symbolicNames = [ "<INVALID>", "AND", "OR", "BRAND", "COUNTRY", "STYLE", 
                      "VARIETY", "STARS", "EQ", "LT", "GT", "LTEQ", "GTEQ", 
                      "NEQ", "ID", "INT", "NEWLINE", "WS", "ANY", "QUOTED_ID" ]

    RULE_prog = 0
    RULE_command = 1
    RULE_expr = 2
    RULE_filter = 3
    RULE_val = 4

    ruleNames =  [ "prog", "command", "expr", "filter", "val" ]

    EOF = Token.EOF
    AND=1
    OR=2
    BRAND=3
    COUNTRY=4
    STYLE=5
    VARIETY=6
    STARS=7
    EQ=8
    LT=9
    GT=10
    LTEQ=11
    GTEQ=12
    NEQ=13
    ID=14
    INT=15
    NEWLINE=16
    WS=17
    ANY=18
    QUOTED_ID=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.CommandContext)
            else:
                return self.getTypedRuleContext(QueryParser.CommandContext,i)


        def getRuleIndex(self):
            return QueryParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = QueryParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.command()
                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 65784) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlankContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(QueryParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlank" ):
                listener.enterBlank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlank" ):
                listener.exitBlank(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlank" ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class PrintJoinContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.CommandContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.ExprContext)
            else:
                return self.getTypedRuleContext(QueryParser.ExprContext,i)

        def NEWLINE(self):
            return self.getToken(QueryParser.NEWLINE, 0)
        def AND(self):
            return self.getToken(QueryParser.AND, 0)
        def OR(self):
            return self.getToken(QueryParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintJoin" ):
                listener.enterPrintJoin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintJoin" ):
                listener.exitPrintJoin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintJoin" ):
                return visitor.visitPrintJoin(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(QueryParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(QueryParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintExpr" ):
                listener.enterPrintExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintExpr" ):
                listener.exitPrintExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)



    def command(self):

        localctx = QueryParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.state = 24
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = QueryParser.PrintJoinContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 15
                self.expr()
                self.state = 16
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==1 or _la==2):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 17
                self.expr()
                self.state = 18
                self.match(QueryParser.NEWLINE)
                pass

            elif la_ == 2:
                localctx = QueryParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 20
                self.expr()
                self.state = 21
                self.match(QueryParser.NEWLINE)
                pass

            elif la_ == 3:
                localctx = QueryParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 23
                self.match(QueryParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CompareContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def filter_(self):
            return self.getTypedRuleContext(QueryParser.FilterContext,0)

        def val(self):
            return self.getTypedRuleContext(QueryParser.ValContext,0)

        def EQ(self):
            return self.getToken(QueryParser.EQ, 0)
        def LT(self):
            return self.getToken(QueryParser.LT, 0)
        def GT(self):
            return self.getToken(QueryParser.GT, 0)
        def LTEQ(self):
            return self.getToken(QueryParser.LTEQ, 0)
        def GTEQ(self):
            return self.getToken(QueryParser.GTEQ, 0)
        def NEQ(self):
            return self.getToken(QueryParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompare" ):
                listener.enterCompare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompare" ):
                listener.exitCompare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompare" ):
                return visitor.visitCompare(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = QueryParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        self._la = 0 # Token type
        try:
            localctx = QueryParser.CompareContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.filter_()
            self.state = 27
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 16128) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 28
            self.val()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_filter

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CountryContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COUNTRY(self):
            return self.getToken(QueryParser.COUNTRY, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCountry" ):
                listener.enterCountry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCountry" ):
                listener.exitCountry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCountry" ):
                return visitor.visitCountry(self)
            else:
                return visitor.visitChildren(self)


    class VarietyContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIETY(self):
            return self.getToken(QueryParser.VARIETY, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariety" ):
                listener.enterVariety(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariety" ):
                listener.exitVariety(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariety" ):
                return visitor.visitVariety(self)
            else:
                return visitor.visitChildren(self)


    class StyleContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STYLE(self):
            return self.getToken(QueryParser.STYLE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStyle" ):
                listener.enterStyle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStyle" ):
                listener.exitStyle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStyle" ):
                return visitor.visitStyle(self)
            else:
                return visitor.visitChildren(self)


    class StarsContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STARS(self):
            return self.getToken(QueryParser.STARS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStars" ):
                listener.enterStars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStars" ):
                listener.exitStars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStars" ):
                return visitor.visitStars(self)
            else:
                return visitor.visitChildren(self)


    class BrandContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BRAND(self):
            return self.getToken(QueryParser.BRAND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBrand" ):
                listener.enterBrand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBrand" ):
                listener.exitBrand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBrand" ):
                return visitor.visitBrand(self)
            else:
                return visitor.visitChildren(self)



    def filter_(self):

        localctx = QueryParser.FilterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_filter)
        try:
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                localctx = QueryParser.BrandContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.match(QueryParser.BRAND)
                pass
            elif token in [4]:
                localctx = QueryParser.CountryContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.match(QueryParser.COUNTRY)
                pass
            elif token in [5]:
                localctx = QueryParser.StyleContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.match(QueryParser.STYLE)
                pass
            elif token in [6]:
                localctx = QueryParser.VarietyContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.match(QueryParser.VARIETY)
                pass
            elif token in [7]:
                localctx = QueryParser.StarsContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 34
                self.match(QueryParser.STARS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_val

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IdContext(ValContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.ValContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(QueryParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(ValContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.ValContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(QueryParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)



    def val(self):

        localctx = QueryParser.ValContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_val)
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                localctx = QueryParser.IdContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(QueryParser.ID)
                pass
            elif token in [15]:
                localctx = QueryParser.IntContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.match(QueryParser.INT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





